<resources>
    <string name="app_name">Zeeals</string>
    <string name="action_settings">Settings</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email / No. Handphone</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="zeeals">Z E E A L S</string>
    <string name="login">LOGIN. </string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="masuk">MASUK</string>
    <string name="lupapass">LUPA PASSWORD?</string>
    <string name="belumpunyaakun">Anda belum mempunyai akun?</string>
    <string name="Ayodaftar">Ayo daftar sekarang.</string>

    <string name="facebook_app_id">373136499948696</string>
    <string name="fb_login_protocol_scheme">fb373136499948696</string>

    <!--Strings related to Daftar-->
    <string name="daftar">DAFTAR </string>
    <string name="daftarbtn"> Daftar →</string>
    <string name="confirm">Konfirmasi Password</string>
    <string name="punyaakun">Sudah punya akun? </string>

    <!--Strings related to Lupa Password-->
    <string name="lupaPassword0">RESET </string>
    <string name="lupaPassword1">PASSWORD.</string>
    <string name="Reset">Reset Password</string>
    <string name="konfirmasipasswod">Confirm Password</string>
    <string name="sudahpunyaakun">Anda sudah mempunyai akun?</string>
    <string name="Ayomasuk">Ayo masuk sekarang.</string>
    <string name="incorrect_email_or_password">Email / Password Salah</string>
    <string name="incorrect_please_try_again">Email atau password yang dimasukkan tidak sesuai. Silahkan coba lagi.</string>
    <string name="coba_lagi">Coba lagi</string>
    <string name="pesan_registrasi_berhasil">Registrasi telah berhasil dilakukan. Silahkan lakukan verifikasi email melalui email yang telah didaftarkan.</string>
    <string name="registrasi_gagal">Registrasi yang dilakukan gagal. Email yang didaftarkan telah terdaftarkan sebelumnya. Silahkan gunakan fitur lupa password</string>
    <string name="change_banner">Change Banner for Profile</string>
    <string name="change_profile_picture">change profile picture</string>
    <string name="save">Save</string>
    <string name="add_link">ADD LINK</string>
    <string name="show">Show</string>
    <string name="set_the_link_title">Set the link Title</string>
    <string name="title">Title</string>
    <string name="set_image_address_here">Set Image Address here</string>
    <string name="image_address">Image \nAddress</string>
    <string name="set_the_url_here">Set the URL here</string>
    <string name="url">URL</string>
    <string name="group">Group</string>
    <string name="edit_group">EDIT GROUP</string>
    <string name="icon">Icon</string>
    <string name="grid">Grid</string>
    <string name="add_group">ADD GROUP</string>
    <string name="SAVE">SAVE</string>
    <string name="sign_in_with_facebook">SIGN IN WITH FACEBOOK</string>
    <string name="log_out_facebok">LOG OUT FACEBOOK</string>
    <string name="account_url">zeeals.link/accountUrl</string>
    <string name="edit_link">EDIT LINK</string>
    <string name="set_your_message_here">Set your message here</string>
    <string name="key">Key</string>
    <string name="set_your_email_here">Set your email here</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="set_your_phone_number_here">Set your phone number here</string>
    <string name="address">Address</string>
    <string name="old_password">Old Password</string>
    <string name="confirm_password">Confirm New Password</string>
    <string name="new_password">New Password</string>
    <string name="type_your_old_password_here">Old password</string>
    <string name="type_your_new_password_here">New password</string>
    <string name="change_password">Change Password</string>
    <string name="paste_image_address_here">Paste image address here</string>
    <string name="close">Close</string>
    <string name="ok">ok</string>

    <string-array name="grid">
        <item> Horizontal </item>
        <item> Vertical </item>

    </string-array>
</resources>
