<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registrasiScreen">


    <TextView
        android:id="@+id/textDaftarFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="186dp"
        android:layout_marginBottom="83dp"
        android:text="@string/daftar"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="50dp"
        app:layout_constraintBottom_toTopOf="@+id/ETemailDaftar"
        app:layout_constraintStart_toStartOf="@+id/ETemailDaftar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside"
        tools:ignore="MissingConstraints" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ETemailDaftar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <AutoCompleteTextView
            android:id="@+id/ETemailDaftarInput"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ETpasswordDaftar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ETemailDaftar">

        <AutoCompleteTextView
            android:id="@+id/ETpasswordDaftarInput"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ETConfpasswordDaftar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ETpasswordDaftar">

        <AutoCompleteTextView
            android:id="@+id/ETConfpasswordDaftarInput"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:hint="@string/confirm"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnDaftar"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/daftarbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ETConfpasswordDaftar" />

    <TextView
        android:id="@+id/textpunyaakun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/punyaakun"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.429"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDaftar" />

    <TextView
        android:id="@+id/textlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:text=" Login."
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toEndOf="@id/textpunyaakun"
        app:layout_constraintTop_toBottomOf="@+id/btnDaftar" />


</android.support.constraint.ConstraintLayout>