<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginScreen">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textResetPassword0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="186dp"
        android:layout_marginBottom="83dp"
        android:text="@string/lupaPassword0"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/ETemail"
        app:layout_constraintStart_toStartOf="@+id/ETemail"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textResetPassword1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="186dp"
        android:layout_marginBottom="83dp"
        android:text="@string/lupaPassword1"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/textResetPassword0"
        app:layout_constraintStart_toStartOf="@+id/ETemail"
        app:layout_constraintTop_toBottomOf="@+id/textResetPassword0"
        app:layout_constraintVertical_chainStyle="spread_inside"
        tools:ignore="MissingConstraints" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ETemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <AutoCompleteTextView
            android:id="@+id/ETemailResetInput"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:autofillHints=""
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            tools:targetApi="o" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btnReset"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/Reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ETemail" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnReset">

        <TextView
            android:id="@+id/textpunyaakun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/punyaakun"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textloginReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:text=" Login."
            android:textColor="@color/colorAccent"
            app:layout_constraintStart_toEndOf="@id/textpunyaakun"
            tools:ignore="MissingConstraints" />

    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>