<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/separator1"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="10dp"
        android:background="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/btnBackEditLink" />

    <ImageView
        android:id="@+id/btnBackEditLink"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:scaleX="0.4"
        android:scaleY="0.4"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_left_arrow_colour"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/edit_link"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/btnDeleteEditLink"
        app:layout_constraintStart_toEndOf="@+id/btnBackEditLink"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="25dp" />

    <ImageView
        android:id="@+id/btnDeleteEditLink"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:scaleX="0.4"
        android:scaleY="0.4"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:src="@drawable/ic_delete_button"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvGroupEditLink"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/group"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/separator2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator1" />

    <Spinner
        android:id="@+id/spinnerEditLink"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@id/separator1" />

    <View
        android:id="@+id/separator2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="20dp"
        android:background="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/spinnerEditLink" />

    <TextView
        android:id="@+id/tvURLEditLink"
        android:layout_width="80dp"

        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/url"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/separator3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator2" />

    <EditText
        android:id="@+id/etURLEditLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:ems="10"
        android:fontFamily="@font/poppinsregular"
        android:hint="@string/set_the_url_here"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@id/separator2"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="166dp" />

    <View
        android:id="@+id/separator3"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="20dp"
        android:background="@color/grey"
        app:layout_constraintTop_toBottomOf="@+id/etURLEditLink"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/tvImageAddressEditLink"
        android:layout_width="80dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="32dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/image_address"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/separator4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator3" />

    <EditText
        android:id="@+id/etImageAddressEditLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:fontFamily="@font/poppinsregular"
        android:hint="@string/set_image_address_here"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/separator3" />

    <View
        android:id="@+id/separator4"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="20dp"
        android:background="@color/grey"
        app:layout_constraintTop_toBottomOf="@+id/etImageAddressEditLink"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/tvTitleEditLink"
        android:layout_width="80dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/title"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/separator5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator4" />

    <EditText
        android:id="@+id/etTitleEditLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:ems="10"
        android:fontFamily="@font/poppinsregular"
        android:hint="@string/set_the_link_title"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tvTitleEditLink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        tools:layout_editor_absoluteY="299dp" />

    <View
        android:id="@+id/separator5"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTitleEditLink" />

    <TextView
        android:id="@+id/tvShowEditLink"
        android:layout_width="80dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="32dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/show"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/separator6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator5" />

    <Switch
        android:id="@+id/switchshowEditLink"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@id/separator5" />

    <View
        android:id="@+id/separator6"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="20dp"
        android:background="@color/grey"
        app:layout_constraintTop_toBottomOf="@+id/switchshowEditLink"
        tools:layout_editor_absoluteX="0dp" />

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button_primary_color"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator6"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/btnSaveEditLink"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <ProgressBar
            android:id="@+id/progress_bar_edit_link"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:indeterminateTint="#FFFBFC" />

    </RelativeLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="125dp" />


</android.support.constraint.ConstraintLayout>
